from enum import Enum


class UserRole(Enum):
    admin = 'admin'
    researcher = 'researcher'
